# NOTE: update the `[project]` section with your app details
[metadata]
name = robo_spray
version = 0.0.1
author = UC Davis robo-spray team, Plant AI Biophysics Lab
author_email = hspyun@ucdavis.edu
url = https://github.com/heesup/robo-spray
download_url = https://github.com/heesup/robo-spray
keywords = robotics, open-source
license_files = LICENSE
description = GPS spray app for the Amiga robot
classifiers =
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

# NOTE: update the the requirements for your app
[options]
python_requires = >=3.6
setup_requires =
    wheel
install_requires =
    wheel
    kivy
    farm_ng_amiga
    kivy-garden.mapview
    folium
    sparkfun-ublox-gps
    pyserial
    spidev
    piexif
    shapely
    scipy
    utm
    geopy
tests_require =
    pytest

# NOTE: do not touch this path unless you know what you are doing
package_dir =
    = libs

[options.extras_require]
dev =
    pytest
    mypy
    pre-commit>=2.0

[flake8]
max-line-length = 120

[mypy]
files = libs/, src/
pretty = True
ignore_missing_imports = True
